--- a/fourierGLL_advectionDiffusion2d/README
+++ b/fourierGLL_advectionDiffusion2d/README
@@ -1,1 +1,3 @@
 From TAM 570 - Spectral Methods for Computational Fluid Dynamics, at UIUC - Fall 2019. Taught by Professor Paul Fischer.
+
+Using fast diagonalization method for viscous solves
